<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">map_android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="get_my_location">Get My Location</string>
    <string name="map_type">Map Type</string>
    <string name="marker_name">Marker Name</string>
    <string name="test_routing">Test Routing</string>

</resources>
